# link-devices

./: .gitignore  AGENTS.md  CHANGELOG.md  HANDOFF.md  README.md  THIRD_PARTY.md
.ordna/: config.yaml
.out-of-scope/: behringer-wing-support.md
KitchenSync/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
KitchenSync/main/: CMakeLists.txt  Kconfig.projbuild  follow_beat.c  follow_beat.h  follow_beat_io.c  follow_beat_io.h  i2s_audio_bus.c  i2s_audio_bus.h  idf_component.yml  ks_config.c  ks_config.h  ks_config_json.c  ks_config_json.h  ks_config_nvs.c  ks_config_nvs.h  ks_display.cpp  ks_display.h  ks_form.c  ks_form.h  ks_hostname.c  ks_hostname.h  ks_led.c  ks_led.h  ks_main.c  ks_status.c  ks_status.h  ks_tick.c  ks_tick.h  ks_tick_health.h  ks_web.cpp  ks_web.h  link_measure_io.c  link_measure_io.h  master_clock.h  metronome_audio.c  metronome_audio.h  midi_clock_in.c  midi_clock_in.h  midi_uart_out.c  midi_uart_out.h  (+10 more)
KitchenSyncTouch/: KitchenSyncTouch.ino  app_config.c  app_config.h  app_config_nvs.cpp  axs5106l.c  axs5106l.h  beat_clock.c  beat_clock.h  beat_source.c  beat_source.h  buttons.c  buttons.h  clock_output.c  clock_output.h  clock_ticker.c  clock_ticker.h  config.h  config_persist.c  config_persist.h  din_midi_out.cpp  din_midi_out.h  fw_version.h  ks_config.c  ks_config.h  ks_config_json.c  ks_config_json.h  ks_status.c  ks_status.h  ktouch_config_migrate.c  ktouch_config_migrate.h  ktouch_config_nvs.cpp  ktouch_config_nvs.h  ktouch_display.cpp  ktouch_display.h  ktouch_legacy_config.h  ktouch_midi_out.cpp  ktouch_midi_out.h  ktouch_status_rgb.c  ktouch_status_rgb.h  ktouch_tempo.cpp  (+42 more)
LinkAudioPoC/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
LinkAudioPoC/main/: CMakeLists.txt  Kconfig.projbuild  beat_stamper.c  beat_stamper.h  idf_component.yml  main.cpp
LoraLink/: LoraLink.ino  README.md  link_protocol.c  lora_bpm_packet.c  lora_bpm_packet.h  lora_config.h  lora_display.cpp  lora_display.h  lora_freshness.c  lora_freshness.h  lora_radio.cpp  lora_radio.h  lora_secrets.h.example  session_timeline.h
P4Hub/: CMakeLists.txt  README.md  sdkconfig.defaults
P4Hub/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  link_measure_io.c  link_measure_io.h  metronome_audio.c  metronome_audio.h  midi_clock_in.c  midi_clock_in.h  midi_link_master.c  midi_link_master.h  p4hub_config.c  p4hub_config.h  p4hub_config_nvs.c  p4hub_config_nvs.h  p4hub_form.c  p4hub_form.h  p4hub_led.c  p4hub_led.h  p4hub_main.c  p4hub_status.c  p4hub_status.h  p4hub_web.cpp  p4hub_web.h  usb_midi_host.c  usb_midi_host.h  wifi_fallback.h  wifi_link.c  wifi_link.h
X32FaderDisp/: X32FaderDisp.ino  app_config.c  app_config_nvs.cpp  config.h  fader_db.c  fader_db.h  fader_disp.cpp  fader_disp.h  osc_in.c  osc_in.h  osc_listener.cpp  osc_listener.h  osc_out.h  osc_sender.h  web_config.cpp
X32Link/: X32Link.ino  app_config.c  app_config.h  app_config_nvs.cpp  axs5106l.c  axs5106l.h  bar.c  bar.h  battery_gauge.c  battery_gauge.h  battery_gauge_io.cpp  battery_gauge_io.h  battery_snapshot.c  battery_snapshot.h  beat_clock.c  beat_clock.h  beat_source.c  beat_source.h  beat_synth.c  beat_synth.h  bpm_publisher.c  bpm_publisher.h  bpm_tracker.c  bpm_tracker.h  build_opt.h  buttons.c  buttons.h  clock_output.c  clock_output.h  clock_ticker.c  clock_ticker.h  config.h  config_persist.c  config_persist.h  din_midi_out.cpp  din_midi_out.h  fw_version.h  ks_config.c  ks_config.h  ks_config_json.c  (+79 more)
X32MidiClock/: X32MidiClock.ino  app_config.h  bar.c  bar.h  bpm_tracker.c  bpm_tracker.h  config.h  midi_bpm_calc.c  midi_bpm_calc.h  midi_clock.cpp  midi_clock.h  osc_out.c  osc_sender.cpp  tempo_snapshot.c  tempo_snapshot.h  web_config.h  web_status_json.c
X32_emulator/: X32.c  X32Auxin.h  X32Bus.h  X32CfgMain.h  X32Channel.h  X32Dca.h  X32Fx.h  X32Fxrtn.h  X32Headamp.h  X32Libs.h  X32Misc.h  X32Mtx.h  X32Output.h  X32PrefStat.h  X32Show.h  X32_emulator.ino  X32logf.c  x32_port.c  x32_port.h  x32_psram.h  x32tap_logic.h
docs/: kitchensync-gtm.md  ota-deployment.md  x32-osc-protocol.md  xr18-geq-osc.md  xr18-meters-osc.md  xr18-xair-osc-cheatsheet.md
hello_psram/: hello_psram.ino
tasks/: ARC-001.md  ARC-002.md  ARC-003.md  ARC-004.md  ARC-005.md  ARC-006.md  ARC-007.md  ARC-008.md  ARC-009.md  ARC-010.md  ARC-011.md  ARC-012.md  ARC-013.md  ARC-014.md  ARC-015.md  ARC-016.md  ARC-017.md  ARC-018.md  ARC-019.md  ARC-020.md  ARC-021.md  ARC-022.md  ARC-023.md  ARC-024.md  ARC-025.md  CLK-001.md  ESP-001.md  ESP-002.md  ESP-003.md  ESP-004.md  ESP-005.md  ESP-006.md  ESP-007.md  ESP-008.md  ESP-009.md  ESP-010.md  ESP-011.md  ESP-012.md  ESP-013.md  ESP-014.md  (+134 more)
test/: .gitignore  Makefile  check_docs.sh  test_app_config.c  test_axs5106l.c  test_bar.c  test_battery_gauge.c  test_beat_clock.c  test_beat_source.c  test_beat_stamper.c  test_beat_synth.c  test_bpm_publisher.c  test_bpm_tracker.c  test_buttons.c  test_clock_output.c  test_clock_ticker.c  test_config_persist.c  test_fader_db.c  test_follow_beat.c  test_ks_config.c  test_ks_config_json.c  test_ks_form.c  test_ks_hostname.c  test_ks_status.c  test_ks_tick.c  test_ktouch_config.c  test_ktouch_migrate.c  test_ktouch_ui.c  test_led_output.c  (+37 more)
tools/linkcli/: CMakeLists.txt  README.md  main.cpp
(+43 files in other folders)
