# KitchenSync reuses the pure, host-tested engines from X32Link UNCHANGED (ADR-0003),
# compiled in by relative path — single source, no copies/forks. Their Unity
# suites in ../test keep covering them.
set(X32LINK_DIR "${CMAKE_CURRENT_LIST_DIR}/../../X32Link")

idf_component_register(
    SRCS "ks_main.c"
         "wifi_link.c"
         "${X32LINK_DIR}/wifi_conn_policy.c"
         "link_measure_io.c"
         "usb_midi_host.c"
         "midi_clock_in.c"
         "${X32LINK_DIR}/midi_bpm_calc.c"
         "ks_web.cpp"
         "ks_status.c"
         "ks_config.c"
         "ks_hostname.c"
         "ks_tick.c"
         "transport_intent.c"
         "ks_form.c"
         "ks_config_nvs.c"
         "metronome_audio.c"
         "i2s_audio_bus.c"
         "follow_beat.c"
         "follow_beat_io.c"
         "ks_led.c"
         "${X32LINK_DIR}/ui_chrome.c"
         "${X32LINK_DIR}/metro_strip.c"
         "${X32LINK_DIR}/clock_ticker.c"
         "${X32LINK_DIR}/clock_output.c"
         "${X32LINK_DIR}/swing.c"
         "${X32LINK_DIR}/beat_clock.c"
         "${X32LINK_DIR}/beat_source.c"
         "${X32LINK_DIR}/metronome.c"
         "${X32LINK_DIR}/metronome_voice.c"
         "${X32LINK_DIR}/usb_midi_pack.c"
         "${X32LINK_DIR}/transport.c"
         "${X32LINK_DIR}/transport_launch.c"
         "${X32LINK_DIR}/link_protocol.c"
         "${X32LINK_DIR}/link_measurement.c"
         "${X32LINK_DIR}/link_measurement_session.c"
         "${X32LINK_DIR}/link_measure_pump.c"
         "${X32LINK_DIR}/session_timeline.c"
         "${X32LINK_DIR}/link_phase.c"
    INCLUDE_DIRS "." "${X32LINK_DIR}"
    PRIV_REQUIRES esp_wifi nvs_flash esp_timer lwip esp_netif esp_event usb esp_http_server driver
                  app_update esp_partition)
